--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,15 @@ body{
 }
 header{
 	background-color: #4caf50;
-	padding: 10px;
-	font-family: 'pacifico';
+	padding: 0px;
+	font-family: 'arial black';
+	text-align: center;
+	text-transform: uppercase;
 	font-size: 70px;
 	color: white;
 	text-shadow: 1px 1px 5px rgba(0,0,0,0.6);
+	letter-spacing: -5px;
+	border: 5px solid black;
 }
 .btn{
 	background-color: #84F959;
@@ -56,19 +60,56 @@ header{
 	display: block;
 	float: left;
 	box-sizing: border-box;
-	width: 20%;
+	width: 35%;
 	padding: 10px 10px 100px 10px;
 	background-color: white;
-	box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.6);
-	height: 200px;
+	/*box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.6);*/
+	height: 260px;
 	user-select: none;
+	border: 5px solid black;
+}
+.card p{
+	margin: 1px;
+}
+.card:nth-child(odd){
+	bac
 }
 .card h1, .card h2, .card h3{
 	text-align: center;
+	margin: 0;
+}
+.card p{
+	font-size: 30px;
+	font-weight: bold;
+	text-align: center;
 }
 .card-long{
-	width: 80% !important;
+	width: 65% !important;
 }
+#lastNum h1{
+	font-size:50px;
+}
+#lastNum p{
+	color: #3f51b5;
+	text-shadow: 0 0 5px #3f51b5;
+	animation: brilhar 2s 1;
+	font-size: 70px;
+	background-color: orange;
+	width: 100px;
+	margin: 50px auto;
+}
+@keyframes brilhar{
+	0%{
+		font-size: 70px;
+	}
+	50%{
+		font-size: 90px;
+	}
+	100%{
+		font-size: 70px;
+	}
+}
+
 #lastNum:hover{
 	cursor: pointer;
 }
