--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 	height: 100vh;
 	padding: 0;
 	margin: 0;
-	background-color: #ccc
+	background-color: #000;
 }
 header{
 	background-color: #4caf50;
@@ -48,13 +48,6 @@ header{
 }
 .container{
 	width: 100%;
-	height: ;
-}
-.container:nth-child(even){
-	background-color: blue;
-}
-.container:nth-child(odd){
-	background-color: red;
 }
 .card{
 	display: block;
@@ -63,7 +56,6 @@ header{
 	width: 35%;
 	padding: 10px 10px 100px 10px;
 	background-color: white;
-	/*box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.6);*/
 	height: 260px;
 	user-select: none;
 	border: 5px solid black;
@@ -72,19 +64,42 @@ header{
 	margin: 1px;
 }
 .card:nth-child(odd){
-	bac
+	background-color: #4caf50;
+	color: white;
 }
-.card h1, .card h2, .card h3{
+.card:nth-child(even){
+	background-color: #aaa;
+}
+.card h1, .card h2, .card h3, .card-long h2{
 	text-align: center;
 	margin: 0;
 }
-.card p{
+.card h1{
+	border: 5px solid black;
+	background-color: white;
+	color: black;
+}
+.card p, .card-long p{
 	font-size: 30px;
 	font-weight: bold;
 	text-align: center;
 }
 .card-long{
-	width: 65% !important;
+	width: 65%;
+	display: block;
+	float: left;
+	box-sizing: border-box;
+	padding: 10px 10px 100px 10px;
+	background-color: white;
+	height: 260px;
+	border: 5px solid black;
+
+}
+#lastNum{
+	display: block;
+	float: left;
+	background-color: white !important;
+	color: black;
 }
 #lastNum h1{
 	font-size:50px;
@@ -93,20 +108,27 @@ header{
 	color: #3f51b5;
 	text-shadow: 0 0 5px #3f51b5;
 	animation: brilhar 2s 1;
-	font-size: 70px;
+	font-size: 650%;
 	background-color: orange;
-	width: 100px;
-	margin: 50px auto;
+	width: 160px;
+	height: 160px;
+	border-radius: 50%;
+	line-height: 160px;
+	margin: 10px auto 0 auto;
+	text-align: center;
+}
+#lastNum:hover p{
+	animation: brilhar 2s infinite;
 }
 @keyframes brilhar{
 	0%{
-		font-size: 70px;
+		font-size: 650%;
 	}
 	50%{
-		font-size: 90px;
+		font-size: 800%;
 	}
 	100%{
-		font-size: 70px;
+		font-size: 650%;
 	}
 }
 
